WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244796
WebNotificationManager: fix build if SERVICE_WORKER=OFF
https://bugs.webkit.org/show_bug.cgi?id=244796
Summary
WebNotificationManager: fix build if SERVICE_WORKER=OFF
Thomas Devoogdt
Reported
2022-09-05 01:41:37 PDT
Similar to
https://bugs.webkit.org/show_bug.cgi?id=231968
, I was not able to compile Webkit with ENABLE_SERVICE_WORKER=OFF. SWContextManager is only compiled if ENABLE_SERVICE_WORKER=ON.
Attachments
SWContextManager is not compiled if SERVICE_WORKER=OFF.
(1.88 KB, patch)
2022-09-05 01:43 PDT
,
Thomas Devoogdt
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Thomas Devoogdt
Comment 1
2022-09-05 01:43:28 PDT
Created
attachment 462138
[details]
SWContextManager is not compiled if SERVICE_WORKER=OFF.
EWS
Comment 2
2022-09-05 07:23:14 PDT
Committed
254163@main
(a91ffd1fa487): <
https://commits.webkit.org/254163@main
> Reviewed commits have been landed. Closing PR #4026 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-09-05 07:24:16 PDT
<
rdar://problem/99569417
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug