WebNotificationManager: fix build if SERVICE_WORKER=OFF

https://bugs.webkit.org/show_bug.cgi?id=244796

Reviewed by NOBODY (OOPS!).

/home/thomas/Documents/nd_falcon/buildroot/output/build/webkitgtk-2.37.1/Source/WebKit/WebProcess/Notifications/WebNotificationManager.cpp:139:33: error: ‘SWContextManager’ has not been declared
     else if (auto* connection = SWContextManager::singleton().connection()) {
                                 ^~~~~~~~~~~~~~~~

Signed-off-by: Thomas Devoogdt <thomas.devoogdt@barco.com>

Canonical link: https://commits.webkit.org/254163@main

(cherry picked from commit a91ffd1fa487cd535befba40a75ff538191275ec)
Signed-off-by: Thomas Devoogdt <thomas.devoogdt@barco.com>